--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="theme-color" content="#89C249" />
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
     <title>MasterTao</title>
+    <link rel="shortcut icon" href="assets/img/favicon.svg" />
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/hamburgers.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/nice-select2.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/swiper-bundle.min.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/nice-select2.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
@@ -249,39 +250,231 @@
         <div class="container">
             <div class="template-title">
                 <h2>Shipping options from China</h2>
-                <div class="card">
-                    <div class="card__img-box" role="img" aria-label="Description of the overall image"></div>
-                    <img src="assets/img/delivery-5.png" class="card-img-top" alt="delivery" />
-                    <div class="card-body">
-                        <h5 class="card-title">Auto - Standard</h5>
-                        <ul class="card__options-list">
-                            <li class="card__options-item">
-                                <img src="assets/img/icon-calendar.svg" alt="calendar" />
-              9–15 days
-                            </li>
-                            <li class="card__options-item">
-                                <img src="assets/img/icon-box.svg" alt="box" />
-              from 5 kg
-                            </li>
-                        </ul>
-                        <div class="card__price">
-                            <span>from</span>
-                            <strong>2,5</strong>
-                            <span>$/kg</span>
+            </div>
+            <div class="template-carousel">
+                <div class="swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="card">
+                                <div class="card__img-box" role="img" aria-label="Description of the overall image"></div>
+                                <img src="assets/img/delivery-1.png" class="card-img-top" alt="delivery" />
+                                <div class="card-body">
+                                    <h5 class="card-title">Auto - Standard</h5>
+                                    <ul class="card__options-list">
+                                        <li class="card__options-item">
+                                            <img src="assets/img/icon-calendar.svg" alt="calendar" />
+                    9–15 days
+                                        </li>
+                                        <li class="card__options-item">
+                                            <img src="assets/img/icon-box.svg" alt="box" />
+                    from 5 kg
+                                        </li>
+                                    </ul>
+                                    <div class="card__price">
+                                        <span>from</span>
+                                        <strong>1,5</strong>
+                                        <span>$/kg</span>
+                                    </div>
+                                    <div class="card__btn-row">
+                                        <a href="#" class="btn btn-sm btn-primary">Submit a request</a>
+                                        <a href="#" class="btn btn-sm btn-secondary">Learn more</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="card__btn-row">
-                            <a href="#" class="btn btn-sm btn-primary">Submit a request</a>
-                            <a href="#" class="btn btn-sm btn-secondary">Learn more</a>
+                        <div class="swiper-slide">
+                            <div class="card">
+                                <div class="card__img-box" role="img" aria-label="Description of the overall image"></div>
+                                <img src="assets/img/delivery-2.png" class="card-img-top" alt="delivery" />
+                                <div class="card-body">
+                                    <h5 class="card-title">Auto - accelerated</h5>
+                                    <ul class="card__options-list">
+                                        <li class="card__options-item">
+                                            <img src="assets/img/icon-calendar.svg" alt="calendar" />
+                    9–15 days
+                                        </li>
+                                        <li class="card__options-item">
+                                            <img src="assets/img/icon-box.svg" alt="box" />
+                    from 5 kg
+                                        </li>
+                                    </ul>
+                                    <div class="card__price">
+                                        <span>from</span>
+                                        <strong>2,5</strong>
+                                        <span>$/kg</span>
+                                    </div>
+                                    <div class="card__btn-row">
+                                        <a href="#" class="btn btn-sm btn-primary">Submit a request</a>
+                                        <a href="#" class="btn btn-sm btn-secondary">Learn more</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="card">
+                                <div class="card__img-box" role="img" aria-label="Description of the overall image"></div>
+                                <img src="assets/img/delivery-3.png" class="card-img-top" alt="delivery" />
+                                <div class="card-body">
+                                    <h5 class="card-title">Aviation</h5>
+                                    <ul class="card__options-list">
+                                        <li class="card__options-item">
+                                            <img src="assets/img/icon-calendar.svg" alt="calendar" />
+                    9–15 days
+                                        </li>
+                                        <li class="card__options-item">
+                                            <img src="assets/img/icon-box.svg" alt="box" />
+                    from 5 kg
+                                        </li>
+                                    </ul>
+                                    <div class="card__price">
+                                        <span>from</span>
+                                        <strong>3,5</strong>
+                                        <span>$/kg</span>
+                                    </div>
+                                    <div class="card__btn-row">
+                                        <a href="#" class="btn btn-sm btn-primary">Submit a request</a>
+                                        <a href="#" class="btn btn-sm btn-secondary">Learn more</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="card">
+                                <div class="card__img-box" role="img" aria-label="Description of the overall image"></div>
+                                <img src="assets/img/delivery-4.png" class="card-img-top" alt="delivery" />
+                                <div class="card-body">
+                                    <h5 class="card-title">Railroad</h5>
+                                    <ul class="card__options-list">
+                                        <li class="card__options-item">
+                                            <img src="assets/img/icon-calendar.svg" alt="calendar" />
+                    9–15 days
+                                        </li>
+                                        <li class="card__options-item">
+                                            <img src="assets/img/icon-box.svg" alt="box" />
+                    from 5 kg
+                                        </li>
+                                    </ul>
+                                    <div class="card__price">
+                                        <span>from</span>
+                                        <strong>4,5</strong>
+                                        <span>$/kg</span>
+                                    </div>
+                                    <div class="card__btn-row">
+                                        <a href="#" class="btn btn-sm btn-primary">Submit a request</a>
+                                        <a href="#" class="btn btn-sm btn-secondary">Learn more</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="card">
+                                <div class="card__img-box" role="img" aria-label="Description of the overall image"></div>
+                                <img src="assets/img/delivery-5.png" class="card-img-top" alt="delivery" />
+                                <div class="card-body">
+                                    <h5 class="card-title">Sea</h5>
+                                    <ul class="card__options-list">
+                                        <li class="card__options-item">
+                                            <img src="assets/img/icon-calendar.svg" alt="calendar" />
+                    9–15 days
+                                        </li>
+                                        <li class="card__options-item">
+                                            <img src="assets/img/icon-box.svg" alt="box" />
+                    from 5 kg
+                                        </li>
+                                    </ul>
+                                    <div class="card__price">
+                                        <span>from</span>
+                                        <strong>5,5</strong>
+                                        <span>$/kg</span>
+                                    </div>
+                                    <div class="card__btn-row">
+                                        <a href="#" class="btn btn-sm btn-primary">Submit a request</a>
+                                        <a href="#" class="btn btn-sm btn-secondary">Learn more</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+                <div class="swiper-arrow-container">
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="services">
+    <section class="services bg-accent">
         <div class="container">
             <div class="template-title">
-                <h2>Услуги</h2>
+                <h2>Services</h2>
+            </div>
+            <div class="template-carousel">
+                <div class="swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="card card_services" style="background-image: url(assets/img/services-1.png)">
+                                <div class="card-body">
+                                    <h5 class="card-title">Redemption of goods</h5>
+                                    <p class="card-text">
+                                        The company is a full range of logistics services for delivery of cargoes from China to Ukraine -
+                                        prefabricated cargoes and whole commodity lots, services of intermediary TaoBao, CARGO China-Ukraine.
+                                    </p>
+                                    <div class="card__btn-row">
+                                        <a href="#" class="btn btn-sm btn-secondary">Read More</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="card card_services" style="background-image: url(assets/img/services-2.png)">
+                                <div class="card-body">
+                                    <h5 class="card-title">Cargo insurance</h5>
+                                    <p class="card-text">
+                                        The company is a full range of logistics services for delivery of cargoes from China to Ukraine -
+                                        prefabricated cargoes and whole commodity lots, services of intermediary TaoBao, CARGO China-Ukraine.
+                                    </p>
+                                    <div class="card__btn-row">
+                                        <a href="#" class="btn btn-sm btn-secondary">Read More</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="card card_services" style="background-image: url(assets/img/services-3.png)">
+                                <div class="card-body">
+                                    <h5 class="card-title">Warehouse rental</h5>
+                                    <p class="card-text">
+                                        The company is a full range of logistics services for delivery of cargoes from China to Ukraine -
+                                        prefabricated cargoes and whole commodity lots, services of intermediary TaoBao, CARGO China-Ukraine.
+                                    </p>
+                                    <div class="card__btn-row">
+                                        <a href="#" class="btn btn-sm btn-secondary">Read More</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="card card_services" style="background-image: url(assets/img/services-4.png)">
+                                <div class="card-body">
+                                    <h5 class="card-title">Transfer of funds</h5>
+                                    <p class="card-text">
+                                        The company is a full range of logistics services for delivery of cargoes from China to Ukraine -
+                                        prefabricated cargoes and whole commodity lots, services of intermediary TaoBao, CARGO China-Ukraine.
+                                    </p>
+                                    <div class="card__btn-row">
+                                        <a href="#" class="btn btn-sm btn-secondary">Read More</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+                <div class="swiper-arrow-container">
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+                </div>
             </div>
         </div>
     </section>
