--- a/index.html
+++ b/index.html
@@ -169,7 +169,6 @@
             <img src="assets/img/calculation-person.png" class="calculation-img" alt="person" />
         </div>
     </section>
-
     <section class="advantages bg-accent">
         <div class="container">
             <div class="template-title">
@@ -417,8 +416,8 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Redemption of goods</h5>
                                     <p class="card-text">
-                                        The company is a full range of logistics services for delivery of cargoes from China to Ukraine -
-                                        prefabricated cargoes and whole commodity lots, services of intermediary TaoBao, CARGO China-Ukraine.
+                                        The company is a full range of logistics services for delivery of cargoes from China to Ukraine - prefabricated cargoes and whole commodity lots, services of intermediary TaoBao,
+                                        CARGO China-Ukraine.
                                     </p>
                                     <div class="card__btn-row">
                                         <a href="#" class="btn btn-sm btn-secondary">Read More</a>
@@ -431,8 +430,8 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Cargo insurance</h5>
                                     <p class="card-text">
-                                        The company is a full range of logistics services for delivery of cargoes from China to Ukraine -
-                                        prefabricated cargoes and whole commodity lots, services of intermediary TaoBao, CARGO China-Ukraine.
+                                        The company is a full range of logistics services for delivery of cargoes from China to Ukraine - prefabricated cargoes and whole commodity lots, services of intermediary TaoBao,
+                                        CARGO China-Ukraine.
                                     </p>
                                     <div class="card__btn-row">
                                         <a href="#" class="btn btn-sm btn-secondary">Read More</a>
@@ -445,8 +444,8 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Warehouse rental</h5>
                                     <p class="card-text">
-                                        The company is a full range of logistics services for delivery of cargoes from China to Ukraine -
-                                        prefabricated cargoes and whole commodity lots, services of intermediary TaoBao, CARGO China-Ukraine.
+                                        The company is a full range of logistics services for delivery of cargoes from China to Ukraine - prefabricated cargoes and whole commodity lots, services of intermediary TaoBao,
+                                        CARGO China-Ukraine.
                                     </p>
                                     <div class="card__btn-row">
                                         <a href="#" class="btn btn-sm btn-secondary">Read More</a>
@@ -459,8 +458,8 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Transfer of funds</h5>
                                     <p class="card-text">
-                                        The company is a full range of logistics services for delivery of cargoes from China to Ukraine -
-                                        prefabricated cargoes and whole commodity lots, services of intermediary TaoBao, CARGO China-Ukraine.
+                                        The company is a full range of logistics services for delivery of cargoes from China to Ukraine - prefabricated cargoes and whole commodity lots, services of intermediary TaoBao,
+                                        CARGO China-Ukraine.
                                     </p>
                                     <div class="card__btn-row">
                                         <a href="#" class="btn btn-sm btn-secondary">Read More</a>
@@ -487,19 +486,130 @@
                 </div>
                 <div class="about-text__description">
                     <p>
-                        Asia Cargo is a full-service logistics company that delivers cargo from China to Ukraine, including
-                        consolidated cargo and full truckloads, Taobao intermediary services, and China-Ukraine cargo transportation.
-                        For your convenience, we offer rates for light and heavy cargo. We have been operating in the market for over
-                        4 years, and our company's managers have been involved in logistics for over 11 years.
+                        Asia Cargo is a full-service logistics company that delivers cargo from China to Ukraine, including consolidated cargo and full truckloads, Taobao intermediary services, and China-Ukraine
+                        cargo transportation. For your convenience, we offer rates for light and heavy cargo. We have been operating in the market for over 4 years, and our company's managers have been involved in
+                        logistics for over 11 years.
                     </p>
                     <p>
-                        We strive to provide the best delivery conditions and the best service to our customers. By choosing us, you
-                        are choosing high-quality delivery that is optimal in terms of price and time! See for yourself!
+                        We strive to provide the best delivery conditions and the best service to our customers. By choosing us, you are choosing high-quality delivery that is optimal in terms of price and time!
+                        See for yourself!
                     </p>
                 </div>
             </div>
             <div class="about__img-box">
                 <img src="assets/img/about-section.png" alt="about" />
+            </div>
+        </div>
+    </section>
+    <section class="about-faq">
+        <div class="container">
+            <div class="template-title">
+                <h2>Frequently asked questions</h2>
+            </div>
+            <div class="faq__row">
+                <div class="accordion" id="accordionExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+              How is the shipping cost calculated?
+            </button>
+          </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p>The cost of delivery is usually calculated based on several factors: the weight and dimensions of the cargo, the distance, and the method of delivery.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              How is payment for cargo delivery made?
+            </button>
+          </h2>
+                        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p>Payment can be made in cash or by bank transfer, including bank cards and e-wallets.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              How cargo customs clearance works?
+            </button>
+          </h2>
+                        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p>The process includes filing a customs declaration, paying duties and taxes, and checking the documents and the cargo itself.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+              Can I pay the supplier for the goods through you?
+            </button>
+          </h2>
+                        <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p>
+                                    Alipaywallet is a payment system that was created specifically for paying for goods and services on AliExpress.com and Alibaba.com, with the ability to accept payments for merchants
+                                    trading on these platforms.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+              What is special about CARGO delivery from China?
+            </button>
+          </h2>
+                        <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p>
+                                    The main feature of cargo delivery from China is a simplified customs clearance and delivery process, where all concerns, including customs clearance, are handled by the logistics
+                                    company.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+              What is the delivery time from China?
+            </button>
+          </h2>
+                        <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <p>
+                                    We carefully pack your cargo. We wrap all the places with tape to prevent the box from tearing or moisture during delivery from China. If necessary, we agree and make additional
+                                    packaging.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <form class="faq-form">
+                    <h3 class="faq-form__title">Остались вопросы?</h3>
+                    <h6 class="faq-form__subtitle">Оставьте заявку и наш менеджер ответит вам в ближайшее время</h6>
+                    <div class="input-box">
+                        <input id="text" type="text" placeholder="Имя *" inputmode="text" />
+                    </div>
+                    <div class="input-box">
+                        <input id="number" type="number" placeholder="Телефон *" inputmode="numeric" />
+                    </div>
+                    <div class="input-box">
+                        <input id="email" type="email" placeholder="E-mail" inputmode="email" />
+                    </div>
+                    <div class="input-box">
+                        <textarea id="question" placeholder="Ваш вопрос"></textarea>
+                    </div>
+                    <button type="submit" href="#" class="btn btn-lg btn-primary">
+                        Next step
+                        <img src="assets/img/icon-arrow-left.svg" class="btn-arrow" alt="arrow" />
+                    </button>
+                </form>
             </div>
         </div>
     </section>
