--- a/index.html
+++ b/index.html
@@ -591,22 +591,22 @@
                     </div>
                 </div>
                 <form class="faq-form">
-                    <h3 class="faq-form__title">Остались вопросы?</h3>
-                    <h6 class="faq-form__subtitle">Оставьте заявку и наш менеджер ответит вам в ближайшее время</h6>
+                    <h3 class="faq-form__title">Do you have any questions?</h3>
+                    <h6 class="faq-form__subtitle">Leave a request and our manager will respond to you shortly.</h6>
                     <div class="input-box">
-                        <input id="text" type="text" placeholder="Имя *" inputmode="text" />
+                        <input id="text" type="text" placeholder="Name *" inputmode="text" />
                     </div>
                     <div class="input-box">
-                        <input id="number" type="number" placeholder="Телефон *" inputmode="numeric" />
+                        <input id="number" type="number" placeholder="Phone *" inputmode="numeric" />
                     </div>
                     <div class="input-box">
                         <input id="email" type="email" placeholder="E-mail" inputmode="email" />
                     </div>
                     <div class="input-box">
-                        <textarea id="question" placeholder="Ваш вопрос"></textarea>
+                        <textarea id="question" placeholder="Your question"></textarea>
                     </div>
                     <button type="submit" href="#" class="btn btn-lg btn-primary">
-                        Next step
+                        Send a request
                         <img src="assets/img/icon-arrow-left.svg" class="btn-arrow" alt="arrow" />
                     </button>
                 </form>
