--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <label for="calculation-file">Upload product photo</label>
                     </div>
                 </div>
-                <button type="submit" href="#" class="btn btn-lg btn-primary">
+                <button type="submit" class="btn btn-lg btn-primary">
                     Next step
                     <img src="assets/img/icon-arrow-left.svg" alt="arrow" />
                 </button>
@@ -245,7 +245,7 @@
             </div>
         </div>
     </section>
-    <section class="delivery">
+    <section id="delivery" class="delivery">
         <div class="container">
             <div class="template-title">
                 <h2>Shipping options from China</h2>
@@ -403,7 +403,7 @@
             </div>
         </div>
     </section>
-    <section class="services bg-accent">
+    <section id="services" class="services bg-accent">
         <div class="container">
             <div class="template-title">
                 <h2>Services</h2>
@@ -478,7 +478,7 @@
         </div>
     </section>
 
-    <section class="about-section">
+    <section id="about-section" class="about-section">
         <div class="container">
             <div class="about__text">
                 <div class="template-title template-title_case-2">
@@ -659,7 +659,65 @@
 </main>
 
 <body>
-    <footer>Footer</footer>
+    <footer id="footer" class="footer">
+        <section class="container">
+            <div class="footer-element">
+                <div class="footer-container">
+                    <div class="footer-logo">
+                        <img src="assets/img/footer-logo.svg" alt="logo" />
+                        <p class="footer__phone">8(800)600-18-69</p>
+                        <a href="#" class="footer__email">info@cargoasia.info</a>
+                        <p class="footer__address">
+                            Address in China:
+                            <br />
+                            浙江省金华市义乌市后宅街道洪华小区5
+                            <br />
+                            栋一单元一楼RT789库房 高建军 电话
+                        </p>
+                        <p class="footer__phone-cn">15966660379</p>
+                        <div class="footer__title">
+                            <a href="#"><img src="assets/img/icon-inst.png" alt="Instagram" /></a>
+                            <a href="#"><img src="assets/img/icon-facebook.png" alt="facebook" /></a>
+                            <a href="#"><img src="assets/img/icon-telegram.png" alt="Telegram" /></a>
+                        </div>
+                    </div>
+                    <div class="footer__navigation">
+                        <div class="footer__nav">
+                            <h4 class="footer__title">Freight transportation</h4>
+                            <ul>
+                                <li><a href="#calculation">Prices and terms</a></li>
+                                <li><a href="#services">Services</a></li>
+                                <li><a href="#about-section">About the company</a></li>
+                                <li><a href="#footer">Contacts</a></li>
+                                <li><a href="#delivery">Process cargo</a></li>
+                            </ul>
+                        </div>
+                        <div class="footer__nav">
+                            <h4 class="footer__title">Services</h4>
+                            <ul>
+                                <li><a href="#">Purchase of goods</a></li>
+                                <li><a href="#">Cargo insurance</a></li>
+                                <li><a href="#">Warehouse rental</a></li>
+                                <li><a href="#">Money transfer</a></li>
+                            </ul>
+                        </div>
+                        <div class="footer__nav">
+                            <h4 class="footer__title">Information</h4>
+                            <ul>
+                                <li><a href="#">Reviews</a></li>
+                                <li><a href="#">Cargo requirements</a></li>
+                                <li><a href="#">Offer agreement</a></li>
+                                <li><a href="#">How to conclude a contract</a></li>
+                                <li><a href="#">Methods of payment for services</a></li>
+                                <li><a href="#">Documents</a></li>
+                                <li><a href="#">Articles</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/nice-select2.js"></script>
