--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <main class="wrapper home">
     <section class="swiper swiper-banner">
         <div class="swiper-wrapper">
-            <div class="swiper-slide" style="background-image: url(assets/img/banner-1.png)">
+            <div class="swiper-slide" style="background-image: url(assets/img/banner-1.webp)">
                 <div class="container">
                     <h1 class="banner-title">Direct CARGO from China</h1>
                     <h5 class="banner-description">We deliver any cargo from China at a fair price.</h5>
@@ -67,7 +67,7 @@
         </a>
                 </div>
             </div>
-            <div class="swiper-slide" style="background-image: url(assets/img/banner-2.png)">
+            <div class="swiper-slide" style="background-image: url(assets/img/banner-2.webp)">
                 <div class="container">
                     <h2 class="banner-title">Purchase of goods from Taobao, 1688</h2>
                     <h5 class="banner-description">Purchase and delivery of goods from Chinese trading platforms.</h5>
@@ -77,7 +77,7 @@
         </a>
                 </div>
             </div>
-            <div class="swiper-slide" style="background-image: url(assets/img/banner-3.png)">
+            <div class="swiper-slide" style="background-image: url(assets/img/banner-3.webp)">
                 <div class="container">
                     <h2 class="banner-title">Express car delivery</h2>
                     <h5 class="banner-description">We deliver any cargo from China at a fair price.</h5>
@@ -87,7 +87,7 @@
         </a>
                 </div>
             </div>
-            <div class="swiper-slide" style="background-image: url(assets/img/banner-4.png)">
+            <div class="swiper-slide" style="background-image: url(assets/img/banner-4.webp)">
                 <div class="container">
                     <h2 class="banner-title">Warehouse rental</h2>
                     <h5 class="banner-description">Purchase and delivery of goods from Chinese trading platforms.</h5>
